# seg-lib

./: .gitignore  CITATION.bib  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: project-questions.md
data/metadata/: dataset_set_sep.csv  dataset_set_sep_sample.csv  ribs_da1.csv  ribs_da2.csv  ribs_small_da1.csv  ribs_small_da2.csv
docker/: Dockerfile  image.def
notebooks/: SAM-fusion-original.ipynb  seg_fusion.ipynb
projects/improving-existing-segmentators-performance/: CITATION.bib  README.md
projects/improving-existing-segmentators-performance/notebooks/: SAM-fusion-original.ipynb  SAM-fusion-v2.ipynb
projects/sample-size-for-training-and-testing/: CITATION.bib  README.md
projects/sample-size-for-training-and-testing/fusion_seg_n_sam/: README.md  eval.py  inference.py  run.sh
scripts/samus/: eval.py  run.sh  test.py  train.py
scripts/seg/: eval.py  run.sh  train.py
scripts/seg_n_sam/: README.md  eval.py  inference.py  run.sh
seg_lib/dataloaders/: data_aug.py  image_ops.py  sam_dataset.py  samus_data_aug.py  seg_dataset.py
seg_lib/eval/: fusion.py  metrics.py  outputs.py  plots.py
seg_lib/io/: files.py  image.py  labelme.py
seg_lib/losses/: combined_losses.py  dice_loss.py  focal_loss.py  selector.py
seg_lib/models/: __init__.py  device.py  normalizer.py  selector.py
seg_lib/models/cafe_net/: PSA.py  pvt.py  pvtv2.py
seg_lib/prompt/: __init__.py  inference_after_sample.py  sampler.py  samus_sampler.py  train_sampler.py
seg_lib/trainers/: __init__.py  pvtv2_trainer.py  samus_trainer.py  seg_trainer.py
tools/: labelme_2_yolov8.py
(+50 files in other folders)
