[tool.poetry]
name = "seg-lib"
version = "1.0.0"
description = "Library for SAMUS training and late mask fusion."
authors = [
    "Gustavo Zanoni <gzf1996@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
albumentations = ">=1.3.1"
matplotlib = ">=3.8.2"
numpy = ">=1.26.3"
opencv-python = ">=4.9.0.80"
pandas = ">=2.2.0"
pyarrow = ">=15.0.0"
scipy = ">=1.12.0"
timm = ">=0.9.12"
torch = ">=2.1.2"
torchvision = ">=0.16.2"
tqdm = ">=4.66.1"
transformers = ">=4.35.2"

[tool.poetry.group.dev.dependencies]
optuna = ">=3.5.0"
seaborn = ">=0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
